# engram

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  awake.md  dream-cycles.md  lucid.md  rem.md
engram/: __init__.py  connectors.py  core.py  partitions.py  storage.py
tests/: test_core.py
